<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_posts"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/padding_16dp"
    app:cardCornerRadius="@dimen/padding_5dp"
    app:cardElevation="@dimen/elevation_2sp"
    app:cardUseCompatPadding="true"
    app:contentPadding="@dimen/padding_16dp">

    <LinearLayout
        android:id="@+id/layout_posts"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_posts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/posts_name"/>

        <EditText
            android:id="@+id/posts_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_value_for_post"
            android:inputType="number"/>

        <Button
            android:id="@+id/button_posts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/button_confirm"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/result_text"/>

        <TextView
            android:id="@+id/user_id_posts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/id_posts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/title_posts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/body_posts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</android.support.v7.widget.CardView>
