<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_comments"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/padding_16dp"
    app:cardCornerRadius="@dimen/padding_5dp"
    app:cardElevation="@dimen/elevation_2sp"
    app:cardUseCompatPadding="true"
    app:contentPadding="@dimen/padding_16dp">

    <LinearLayout
        android:id="@+id/layout_comments"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comments_name"/>

        <EditText
            android:id="@+id/comments_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_value_for_comment"
            android:inputType="number"/>

        <Button
            android:id="@+id/button_comments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/button_confirm"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/result_text"/>

        <TextView
            android:id="@+id/post_id_comments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/comments_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/comments_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/comments_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/comments_body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</android.support.v7.widget.CardView>

